--- a/transgood.html
+++ b/transgood.html
@@ -30,7 +30,7 @@
 <p>But what is certain is that these people are all, you know, <em>people</em>. They have jobs and loves and losses and lives, just like anyone else. But they have something that many others don’t: they have to endure a constant discrimination, an exclusion and marginalization that pervades every aspect of life.</p>
 <figure>
 <img src="https://i0.wp.com/upload.wikimedia.org/wikipedia/commons/5/55/Third_International_Intersex_Forum.jpg" alt="Attendees at the third international intersex forum">
-<figcation>Some people</figcation>
+<figcaption>Some people</figcation>
 </figure>
 <p>I am a very privileged person. I’m white, male, middle class, from a developed country. I don’t know what it’s like to be harassed for being who I am. I don’t know what it’s like to live your whole life being told you’re different, weird, a freak. But I imagine it’s not very nice. So I have to listen to what others say to know&nbsp;what discrimination feels like.</p>
 <p>It’s even worse when you come to religion. Here we are, approaching the realm of the spiritual, a place we come to because we believe in something better; because we want to be lifted up. Yet we meet, here again, the same dreary, boring discrimination we’ve found elsewhere; except now it comes from God, or from the Buddha, or from Allah. Terrific. That’s just so helpful.</p>
