--- a/mein-kampf.html
+++ b/mein-kampf.html
@@ -30,7 +30,7 @@
 
 <p>I’ve never read <em>Mein Kampf</em>. My history teacher, Br. Kevin Paull, did though. He said it was the worst book he’d ever read. And he read a lot of books.</p>
 
-<p>Reading <em>Mein Kampf</em> from a critical history point of view is important, even essential. As the evils of Nazism drift into sentimental soft-focus, their ills re-emerge from the swamp. Like a Hydra. We are forgetting, not because of the fog of memory, but because of the fog of lies.</p>
+<p>Reading <em>Mein Kampf</em> from a critical history point of view is important, even essential. As the histtorical evils of Nazism drift into sentimental soft-focus, their ills re-emerge from the swamp. Like a Hydra. We are forgetting, not because of the fog of memory, but because of the fog of lies.</p>
 
 <p>But what if you read <em>Mein Kampf</em> because you appreciate its political insights? You don’t agree with everything, of course. But, you suggest, not everything in it is bad.</p>
 
