--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@ header p
 		<h1><i>words by</i> sujato</h1>
 		<p>Collected writings, talks, and assorted imaginalia</p>
 	</div>
+	<!--Start CO2 Earth widget by Show.Earth v21c-->
+<a href="https://www.co2.earth/" target="_blank">
+<img src="https://assets.show.earth/widget-co2/kc-monthly-0720.png" style="max-width:100%" title="Click for more CO2 Earth info..." alt="Latest monthly CO2 level in the Earth's atmosphere" /> </a>
+<!--End CO2 Earth Widget-->
 	</header>
 	<main>
 		<section id='frontmatter'>
