--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@ header p
 <a href="https://www.co2.earth/" target="_blank">
 <img src="https://assets.show.earth/widget-co2/kc-monthly-0720.png" style="max-width:100%" title="Click for more CO2 Earth info..." alt="Latest monthly CO2 level in the Earth's atmosphere" /> </a>
 <!--End CO2 Earth Widget-->
+
+<script src="https://co2widget.com/build/widget.min.js" defer></script>
+
+<div id="czw" class="czw"></div>
 	</header>
 	<main>
 		<section id='frontmatter'>
