add decoding patriarchy

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ header p
 			<h3>other things</h3>
 			<p>Things that don’t fit elsewhere.</p>
 			<ul>
+				<li><a href='decoding-patriarchy.html'>decoding patriarchy</a>: a user’s guide!</li>
 				<li><a href='nothing-here.html'>nothing here is what it once was</a> A Buddhist perspective in contribution to <em>Statements from the Soul: The Moral Case for the Uluru Statement from the Heart</em>.</li>
 				<li><a href='cowboys.html'>the cowboy and the modern man</a> Reflections on masculinity and myth.</li>
 				<li><a href='interdependence.html'>interdependence</a></li>
